[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/gui/menus/facility/StatDetails.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/gui/menus/facility/ResourceSlider.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/gui/menus/facility/facility_screen.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[node name="FacilityScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 592.0
rect_clip_content = true
size_flags_vertical = 3

[node name="DetailContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 334.0
margin_bottom = 584.0

[node name="FlavourDetail" type="VBoxContainer" parent="MarginContainer/HBoxContainer/DetailContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 327.0
margin_bottom = 577.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer/DetailContainer/FlavourDetail"]
margin_right = 320.0
margin_bottom = 14.0

[node name="Art" type="TextureRect" parent="MarginContainer/HBoxContainer/DetailContainer/FlavourDetail"]
margin_top = 18.0
margin_right = 320.0
margin_bottom = 218.0
rect_min_size = Vector2( 320, 200 )
expand = true
stretch_mode = 1

[node name="FlavourText" type="Label" parent="MarginContainer/HBoxContainer/DetailContainer/FlavourDetail"]
margin_top = 222.0
margin_right = 320.0
margin_bottom = 570.0
size_flags_vertical = 7
autowrap = true
clip_text = true

[node name="AbandonedPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 338.0
margin_right = 1008.0
margin_bottom = 584.0
size_flags_horizontal = 3

[node name="Rebuild" type="Button" parent="MarginContainer/HBoxContainer/AbandonedPanel"]
margin_left = 271.0
margin_top = 244.0
margin_right = 399.0
margin_bottom = 340.0
rect_min_size = Vector2( 128, 96 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Rebuild"

[node name="StatsContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
visible = false
margin_left = 338.0
margin_right = 1008.0
margin_bottom = 584.0
size_flags_horizontal = 3

[node name="StatsScreen" type="VBoxContainer" parent="MarginContainer/HBoxContainer/StatsContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 663.0
margin_bottom = 577.0
custom_constants/separation = 0

[node name="IntegrityRow" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen"]
margin_right = 656.0
margin_bottom = 146.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen/IntegrityRow"]
margin_right = 524.0
margin_bottom = 146.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen/IntegrityRow/VBoxContainer2"]
margin_right = 524.0
margin_bottom = 14.0
text = "Integrity"

[node name="HealthDetails" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen/IntegrityRow/VBoxContainer2" instance=ExtResource( 1 )]
margin_top = 18.0
margin_right = 524.0
margin_bottom = 106.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen/IntegrityRow"]
margin_left = 528.0
margin_right = 656.0
margin_bottom = 146.0

[node name="OnOffButton" type="Button" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen/IntegrityRow/VBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
icon = ExtResource( 4 )
expand_icon = true

[node name="StatusMarker" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen/IntegrityRow/VBoxContainer"]
margin_top = 132.0
margin_right = 128.0
margin_bottom = 146.0
text = "On"
align = 1

[node name="ResourcesRow" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen"]
margin_top = 146.0
margin_right = 656.0
margin_bottom = 570.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="FuelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen/ResourcesRow"]
margin_right = 328.0
margin_bottom = 424.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen/ResourcesRow/FuelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 321.0
margin_bottom = 417.0
rect_clip_content = true
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen/ResourcesRow/FuelContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 314.0
margin_bottom = 212.0
text = "Fuel"
align = 1

[node name="ProductContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen/ResourcesRow"]
margin_left = 328.0
margin_right = 656.0
margin_bottom = 424.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen/ResourcesRow/ProductContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 321.0
margin_bottom = 417.0
rect_clip_content = true
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer/StatsScreen/ResourcesRow/ProductContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 314.0
margin_bottom = 212.0
text = "Product"
align = 1

[node name="ResourceSlider" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -113.0
margin_right = 144.0
margin_bottom = 113.0

[connection signal="pressed" from="MarginContainer/HBoxContainer/AbandonedPanel/Rebuild" to="." method="_on_Rebuild_pressed"]
[connection signal="value_chosen" from="ResourceSlider" to="." method="_on_ResourceSlider_value_chosen"]
